<resources>
    <string name="app_name">fasdd_android</string>
    <string name="langkah_terbaik_untuk_tanaman_anda">Langkah Terbaik Untuk Tanaman Anda</string>
    <string name="lorem_ipsum_is_simply_dummy_text_of_the_printing_and_typesetting_industry_lorem_ipsum_has_been_the_industry_s_standard_dummy_text_ever_since_the">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry’s standard dummy text ever since the ,</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="news_title">News Title</string>
    <string name="news_excerpt">lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</string>
    <string name="news_date">Date</string>
    <string name="news_source" />
    <string-array name="weather_temp">
        <item>04°C</item>
        <item>12°C</item>
        <item>08°C</item>
        <item>04°C</item>
    </string-array>
    <string-array name="weather_place">
        <item>Bima</item>
        <item>Denpasar</item>
        <item>Jakarta</item>
        <item>Mataram</item>
    </string-array>
    <string-array name="weather_time">
        <item>13:00:00</item>
        <item>15:00:00</item>
        <item>14:00:00</item>
        <item>11:00:00</item>
    </string-array>
    <string-array name="weather_type">
        <item>sunny</item>
        <item>cloudy</item>
        <item>rainy</item>
        <item>sunny</item>
    </string-array>
    <string-array name='notif_title'>
        <item>Hasil Scan Anda sudah selesai</item>
        <item>Hasil Scan Anda sudah selesai</item>
        <item>Hasil Scan Anda sudah selesai</item>
    </string-array>
    <string-array name='notif_excerpt'>
        <item>Tanaman Anda terkena penyakit A</item>
        <item>Tanaman Anda terkena penyakit B</item>
        <item>Tanaman Anda terkena penyakit C</item>
    </string-array>
    <string-array name="notif_datetimes">
        <item>2024-05-10 13:00:00</item>
        <item>2024-05-10 10:00:00</item>
        <item>2024-05-05 10:00:00</item>
    </string-array>
    <string-array name="news_titles">
        <item>Perkembangan Teknologi Pertanian di Indonesia</item>
        <item>Program Subsidi Pupuk bagi Petani</item>
        <item>Peningkatan Hasil Panen Padi di Jawa Barat</item>
        <item>Keberlanjutan Pertanian Organik di Bali</item>
        <item>Dampak Perubahan Iklim terhadap Pertanian di Sumatera</item>
    </string-array>
    <string-array name="news_excerpt">
        <item>Teknologi pertanian di Indonesia terus berkembang dengan inovasi baru yang membantu petani meningkatkan efisiensi dan hasil panen.</item>
        <item>Pemerintah meluncurkan program subsidi pupuk untuk membantu petani mengurangi biaya produksi dan meningkatkan kesejahteraan.</item>
        <item>Petani di Jawa Barat berhasil meningkatkan hasil panen padi mereka berkat penerapan teknik pertanian modern.</item>
        <item>Pertanian organik di Bali menunjukkan keberlanjutan yang tinggi dan menarik minat pasar internasional.</item>
        <item>Perubahan iklim memberikan tantangan baru bagi petani di Sumatera, yang memerlukan adaptasi dan strategi baru.</item>
    </string-array>
    <string-array name="news_datetimes">
        <item>2024-05-10 13:00:00</item>
        <item>2024-05-10 10:00:00</item>
        <item>2024-05-05 10:00:00</item>
        <item>2024-04-02 10:00:00</item>
        <item>2023-05-01 10:00:00</item>
    </string-array>
    <string-array name="news_images">
        <item>https://via.placeholder.com/50</item>
        <item>https://via.placeholder.com/50</item>
        <item>https://via.placeholder.com/50</item>
        <item>https://via.placeholder.com/50</item>
        <item>https://via.placeholder.com/50</item>
    </string-array>
    <string-array name="news_contents">
        <item>Teknologi pertanian di Indonesia terus berkembang dengan inovasi baru yang membantu petani meningkatkan efisiensi dan hasil panen. Berbagai alat dan mesin baru diperkenalkan untuk mempermudah proses pertanian, mulai dari penanaman hingga panen.</item>
        <item>Pemerintah meluncurkan program subsidi pupuk untuk membantu petani mengurangi biaya produksi dan meningkatkan kesejahteraan. Subsidi ini diharapkan dapat meningkatkan produksi pertanian dan ketahanan pangan nasional.</item>
        <item>Petani di Jawa Barat berhasil meningkatkan hasil panen padi mereka berkat penerapan teknik pertanian modern. Penggunaan varietas padi unggul dan penerapan sistem irigasi yang efisien menjadi kunci kesuksesan ini.</item>
        <item>Pertanian organik di Bali menunjukkan keberlanjutan yang tinggi dan menarik minat pasar internasional. Produk organik dari Bali kini diekspor ke berbagai negara, memberikan nilai tambah bagi petani lokal.</item>
        <item>Perubahan iklim memberikan tantangan baru bagi petani di Sumatera, yang memerlukan adaptasi dan strategi baru. Penelitian dan pelatihan untuk mengatasi dampak perubahan iklim terus dilakukan untuk membantu petani bertahan dan berkembang.</item>
    </string-array>


</resources>