<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/news_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/placeholder"
        android:scaleType="centerCrop"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/news_image"
        android:layout_toRightOf="@+id/news_image"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_height="wrap_content"
        tools:ignore="RtlHardcoded">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/news_title"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="@string/news_title"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/news_datetime"
                android:textSize="14sp"
                tools:text="@string/news_date"
                android:paddingLeft="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>
                <TextView
                    android:id="@+id/news_excerpt"
                    tools:text="@string/news_excerpt"
                    android:maxLines="2"
                    android:textSize="14sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

    </LinearLayout>

</RelativeLayout>