<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <ImageView
        android:id="@+id/img1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="-28dp"
        android:layout_marginTop="-8dp"
        android:src="@drawable/gambar2" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/img1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-132dp"
        android:fontFamily="@font/poppinsbold"
        android:gravity="center_horizontal"
        android:text="Login"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/karakter"
        android:layout_width="202dp"
        android:layout_height="212dp"
        android:layout_below="@id/text1"
        android:layout_marginTop="-12dp"
        android:src="@drawable/gambar3"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/karakter"
        android:padding="20dp"
        android:id="@+id/layout1">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/input_shape"
            android:hint="Email"
            android:backgroundTint="@color/grey"
            android:paddingLeft="10dp"
            android:id="@+id/input1"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/input_shape"
            android:hint="@string/password"
            android:backgroundTint="@color/grey"
            android:paddingStart="10dp"
            android:id="@+id/input2"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout1"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppinsmedium"
        android:gravity="center_horizontal"
        android:text="@string/forgot_password"
        android:textColor="@color/green"
        android:textSize="15sp"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:width="330dp"
        android:backgroundTint="@color/green"
        android:fontFamily="@font/poppinssemibold"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:id="@+id/btn1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/btn1"
        android:gravity="center"
        android:layout_marginTop="15dp">
        <TextView
            android:id="@+id/text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsmedium"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/black"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/text4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsmedium"
            android:text="@string/sign_up"
            android:textColor="@color/green"
            android:textSize="15sp"/>

    </LinearLayout>


</RelativeLayout>